test/css/mobile.css
body {
    background-size: 100%;
}

.panel {
    height: 5vh;
    font-size: 2.5vh;
    .widget {
        margin: 0.5rem;
    };
}

.desktop {
    margin-top: 5vh;
    margin-left: 6vh;  
    gap: 5rem;

    justify-content: left;
}



#projects, #socials {
    transform: translate(-25%, -15%);
}



.window { 
    width: 100vw;
    height: 95vh;
    left: 0;
    top: 5vh;
    overflow: hidden;
}

.window::after {
    display: inline-block;
    width: 100vw;
    height: 6vh !important;
    
    background-color: rgb(var(--bg2));
    content: " "
}

.window .titlebar {
    position: relative;
    height: 2rem;
}
.window .content {
    background-color: rgb(var(--bg2), 0.90);;
}


.projects-window, .socials-window {
    * {
        background-color: transparent;
    }
    .content {
        transform: translate(5vw, 10vh);
        border: none;
        border-radius: 10vw;
        background-color: rgb(var(--bg2), 0.85);
        width: 90vw;
        height: 50vh !important;

        padding-top: 5ch;

        gap: 0;
    }
    .titlebar p {
        position: absolute;
        top: 17vh;
        z-index: 10000;
        font-size: 2rem;
    }

}
.projects-window::after, .socials-window::after {
    background-color: transparent;
}

.popup-window { 
    height: 30vh;
    width: 80%;
    left: 10%;
    top: 50%;
}
.popup-window .titlebar {
    display: none;
}
.popup-window .content {
    height: 30vh !important;
    background-color: rgb(var(--bg2));
    p {
        display: block;
        width: 70%;
        height: fit-content;
        background: transparent;
        margin: 0;

        font-weight: bold;
        font-size: 1.5rem;
    }
    .browser {
        position: relative;
        top: -15%;

        display: flex;
        align-items: left;
        align-content: center;
        width: 90%;
        height: fit-content;
        gap: 1rem;

        .browser-info { 
            width: 100%;
            .browser-img {
                display: inline;
                width: 2rem;
                height: 2rem;
                transform: translateY(25%);
                margin: 0;
            }

            .browser-name {
                display: inline;
                font-size: 1rem;
                font-weight: normal;
            }
        }

        input {
            width: 1rem;
            height: 1rem;
            
            transform: scale(200%) translateY(40%)
        }
    }
}

.popup-buttons {
    position: relative;
    top: -15%;

}


.projects-window .content, .socials-window .content {
    justify-content: center;
}
.projects-window .content .app-icon, .socials-window .content .app-icon {
    margin: 2rem;
    width: 7vh;
    height: 7vh;

    i {
        font-size: 1.5rem;
    }

}

.content {
    height: 84vh;
    backdrop-filter: blur(3px); 
    -webkit-backdrop-filter: blur(3px); /* for safari */

    p {
        width: 35%;
        height: 3rem;
        align-content: center;
    }
}

.close-btn {
    top: 89vh;
    transform: translateY(10%);
    aspect-ratio: 1;
    width: 5vh;

    background-color: black;
    border: none;
    border-radius: 100vh;

    font-size: 1.75vh;

    i {
        color: white;
    }
}

.android.window .content {
    height: 77vh;
}
.android.window .titlebar .close-btn {
    top: 82vh;
}
.projects-window .titlebar .close-btn, .socials-window .titlebar .close-btn {
    transform: translateY(-100%);
}

.app-icon#connect4 {
    font-size: 1.3rem;
}

